Performance regression on secondary application with retryable batched writes

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.6.5, 4.0.0-rc0
    • Affects Version/s: 3.6.4, 3.7.4
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v3.6
    • Sharding 2018-05-07, Sharding 2018-05-21
    • 28
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      SERVER-32445 made it such that every write that has txnId will introduce an extra write on the config.transactions in the secondary.

            Assignee:
            Randolph Tan
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved: