SERVER-34651 Squash writes for updates to config.transactions during secondary replication